# MC-SLAM

./: .gitignore  CMakeLists.txt  README.md  ReleaseNotes.md  WINDOWS_BUILD.md
MCApps/: CMakeLists.txt
MCApps/include/: ParseSettings.h
MCApps/params/: datapaths
MCApps/params/nuance_calib/: nuance.yaml  nuance_02.yaml
MCApps/params/zed_calib/: calib_zed.yaml
MCApps/src/: ParseSettings.cpp  mc_slam_app.cpp  mc_slam_app_windows.cpp
MCDataUtils/: CMakeLists.txt
MCDataUtils/include/MCDataUtils/: CamArrayConfig.h  DatasetReader.h  DatasetReaderBase.h  MCDataUtilParams.h  RosDataReader.h  RosbagParser.h  VideoStreamReader.h
MCDataUtils/src/: CamArrayConfig.cpp  DatasetReader.cpp  RosDataReader.cpp  RosbagParser.cpp  VideoStreamReader.cpp
MCSlam/: CMakeLists.txt
MCSlam/include/MCSlam/: Backend.h  FrontEnd.h  FrontEndBase.h  GlobalMap.h  LoopCloser.h  MultiCameraFrame.h  ORBVocabulary.h  OpenGlViewer.h  Preintegration.h  Tracking.h  relocalization.h  utils.h
MCSlam/src/: Backend.cpp  FrontEnd.cpp  GlobalMap.cpp  LoopCloser.cpp  MultiCameraFrame.cpp  OpenGlViewer.cpp  Preintegration.cpp  Tracking.cpp  newGPSFactor.cpp  relocalization.cpp
MCSlam/src/tests_misc/: CMakeLists.txt  parameters.yaml  reduced_camera_system.cpp
cmake/: CMakeLists.txt
common_utils/: CMakeLists.txt
scripts/python/: Camera_calib_checks.ipynb  Trajectory_scripts.ipynb  Trajectory_scripts_checkerboard.ipynb  compute_drift.py  compute_trajerror_apriltag.py  convert_vio_to_cam_frame.py
scripts/python/.ipynb_checkpoints/: Trajectory_scripts-checkpoint.ipynb  Trajectory_scripts_checkerboard-checkpoint.ipynb
test_imu_modules/: CMakeLists.txt  empty_images.py  package.xml
test_imu_modules/src/: 5_1_zed.txt  dead_Reckoning_procrustes.py  imu_preintegration_test.cpp  imu_unit_test1.cpp  imu_unit_test3.cpp  plot_imu_unit_test.py  plot_txt_files.py  rosbag_kitti.py  vector_nav_combined.txt  zed_combined.txt
test_scripts/gps_imu_fusion/: CMakeLists.txt  package.xml
test_scripts/gps_imu_fusion/config/: fusion_params.yaml  stim_dvl_params.yaml
test_scripts/gps_imu_fusion/data/carter_ground/: carter_gps_data.txt
test_scripts/gps_imu_fusion/results/carter_ground/: carter_fusion_log.txt  carter_imu_output_log.txt
test_scripts/gps_imu_fusion/src/: dvl_imu_fusion.cpp  gps_imu_fusion1.cpp  image_imu_fusion.cpp
test_scripts/gps_tests/: umeyama_test1.py  umeyama_test2.py
test_scripts/min_working_ex/: CMakeLists.txt  package.xml
test_scripts/min_working_ex/gps_imu_fusion/: CMakeLists.txt
test_scripts/min_working_ex/gps_imu_fusion/config/: parameters.yaml
test_scripts/min_working_ex/gps_imu_fusion/data/: output.txt  sensor_data_gt.txt  sensor_data_gt1.txt  sensor_data_noisy.txt  sensor_data_noisy1.txt  sensor_data_rotated1.txt  sensor_data_rotated_15.txt
test_scripts/min_working_ex/gps_imu_fusion/generate_data/: generate_ground_truth.py  plot_output_generate.py
test_scripts/min_working_ex/gps_imu_fusion/results/: graph_logs_12_jun_gps.txt  graph_logs_12_jun_gps_output.txt  graph_logs_kri_full.txt  graph_logs_kri_gps.txt
test_scripts/min_working_ex/gps_imu_fusion/src/: gps_imu_fusion.cpp  gps_imu_fusion_mwe.cpp
test_scripts/min_working_ex/gps_tests/: CMakeLists.txt
test_scripts/min_working_ex/gps_tests/config/: parameters.yaml
test_scripts/min_working_ex/gps_tests/data/curve/: sensor_data_curve_gt.txt  sensor_data_curve_rot_0.txt  sensor_data_curve_rot_15.txt  sensor_data_curve_rot_5.txt
test_scripts/min_working_ex/gps_tests/data/straight/: sensor_data_straight_gt.txt  sensor_data_straight_rot_0.txt  sensor_data_straight_rot_10.txt  sensor_data_straight_rot_22.5.txt  sensor_data_straight_rot_25.txt  sensor_data_straight_rot_45.txt  sensor_data_straight_rot_5.txt
test_scripts/min_working_ex/gps_tests/generate_data/: generate_ground_truth.py  plot_output_generate.py
test_scripts/min_working_ex/gps_tests/results/: output_sensor_data_curve_rot_15.txt  output_sensor_data_curve_rot_5.txt  output_sensor_data_straight_rot_10.txt  output_sensor_data_straight_rot_25.txt
test_scripts/min_working_ex/gps_tests/src/: gps_localization.cpp
test_scripts/new_custom_factors/: CMakeLists.txt  package.xml
test_scripts/new_custom_factors/include/: newGPSFactor.h  new_DVL_factor.h
test_scripts/new_custom_factors/src/: newGPSFactor.cpp  new_DVL_factor.cpp
test_scripts/unit_tests/: CMakeLists.txt  package.xml
test_scripts/unit_tests/src/: testDVLFactor.cpp  testnewGPSFactor.cpp  unitnewGPSFactor.cpp
test_scripts/utils/: rosbag_kitti_gps.py  rosbag_kitti_imu.py
